--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,1 +1,11 @@
-!out/
+.vscode/**
+.vscode-test/**
+src/**
+.gitignore
+.yarnrc
+vsc-extension-quickstart.md
+**/tsconfig.json
+**/eslint.config.mjs
+**/*.map
+**/*.ts
+**/.vscode-test.*
